--- a/static/scss/page/search.scss
+++ b/static/scss/page/search.scss
@@ -20,86 +20,105 @@ $txt: #183b56;
   }
 }
 
-.search-search{
-  position: absolute;
-  top: 55px;
-  width: 100%;
-  padding-inline: 15px;
-  padding-bottom: 15px;
-  padding-top: 15px;
-  text-align: center;
-  border-bottom: 1px solid rgba(40,40,40,0.1);
-  z-index: 10000;
-  background: white;
-  &.sticky{
-      position: fixed;
-      top: 0;
-  }
-  button{
-      border: none;
-      position: absolute;
-      right: 42px;
-      top: 28px;
-      background: white !important;
-      padding: 11px 18px;
-      margin: -11px -18px;
-      i{
-        border-radius: 100%;
-        font-size: 15px;
-        color: #183b56a9;
-        &::before{
-            border-radius: 100%;
-            background: rgba(155, 155, 155, 0.22);
-            padding: 8px;
-            margin: -8px;
-          }
-      }
-  }
-  input{
-    width: 100%;
-    height: 50px;
-    border: none;
-    outline: none;
-    padding: 7px;
-    background: white;
-    border: 1px solid rgb(234,234,234);
-    color: $txt;
-    border-radius: 4px;
-    font-size: 15px;
-    &::placeholder{
-      color: $txt;
-      opacity: 0.8;
-    }
-    &:focus, &:active{
-      border-width: 2px;
-      border-color: rgb(212, 212, 212);
-    }
-  }
-}
-
 
 .page{
-  .search-q{
+  .search-search{
     position: absolute;
-    top: 136px;
+    top: 55px;
     width: 100%;
-    height: auto;
-    background: $primBtn;
-    color: $white;
-    font-size: 14px;
-    padding: 10px 18px;
-    font-weight: 500;
+    padding-inline: 15px;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    text-align: center;
+    border-bottom: 1px solid rgba(40,40,40,0.1);
     z-index: 10000;
-    &.sticky{
-      position: fixed;
-      top: calc(136px - 55px);
-      box-shadow: 0 0 4px rgba(5,5,5,0.12);
+    background: white;
+    form{
+      display: flex;
+      border: 1px solid rgb(234,234,234);
+      border-radius: 4px;
     }
-   }
-    .search-results{
-      padding-inline: 18px;
-      padding-top: 100px;
+    &.sticky{
+        position: fixed;
+        top: 0;
+        box-shadow: 0 0 4px rgba(5,5,5,0.12);
+    }
+    button{
+        border: none;
+        background: transparent;
+        position: absolute;
+        right: 42px;
+        top: 29px;
+        padding: 3px 8px;
+        margin: -3px -8px;
+        border-radius: 100%;
+        background: rgba(155, 155, 155, 0.22);
+        i{
+            font-size: 15px;
+            color: #183b56a9;
+        }
+    }
+    input{
+      width: 85%;
+      height: 50px;
+      border: none;
+      outline: none;
+      padding: 7px;
+      background: white;
+      color: $txt;
+      border-radius: 4px;
+      font-size: 15px;
+      &::placeholder{
+        color: $txt;
+        opacity: 0.8;
+      }
+      &:focus, &:active{
+        border-width: 2px;
+        border-color: rgb(212, 212, 212);
+      }
+    }
+}
+  .search-results{
+    padding-top: 245px;
+    #searchQYes{
+      position: absolute;
+      top: 135px;
+      left: 0;
+      width: 100%;
+      height: auto;
+      background: $primBtn;
+      color: $white;
+      font-size: 14px;
+      padding: 10px 18px;
+      font-weight: 500;
+      z-index: 10000;
+      text-align: left;
+      &.sticky{
+        position: fixed;
+        top: calc(136px - 55px);
+        box-shadow: 0 0 4px rgba(5,5,5,0.12);
+      }
+     }
       .no-results{
+        #searchQNo{
+          position: absolute;
+          top: 70px;
+          left: 0;
+          width: 100%;
+          height: auto;
+          background: $primBtn;
+          color: $white;
+          font-size: 14px;
+          padding: 10px 18px;
+          font-weight: 500;
+          z-index: 10000;
+          opacity: 1 !important;
+          &.sticky{
+            position: fixed;
+            top: 0px;
+            box-shadow: 0 0 4px rgba(5,5,5,0.12);
+          }
+         }
         i{
           color: $primBtn;
           font-size: 40px;
@@ -119,7 +138,7 @@ $txt: #183b56;
             position: relative;
             margin-top: 22px;
             padding: 25px 15px;
-            background: rgba(185, 185, 185, 0.15);
+            background: rgba(185, 185, 185, 0.18);
             i{
               position: absolute;
               font-size: 15px;
@@ -127,8 +146,11 @@ $txt: #183b56;
               right: 35px;
               top: 43px;
               background: $white;
-              padding: 16px;
-              margin: -16px;
+              padding: 17px 16px;
+              margin: -17px -16px;
+              padding-top: 18px;
+              margin-top: -18px;
+              border-radius: 4px;
               &::before{
                 padding: 7px;
                 margin: -7px;
@@ -137,7 +159,7 @@ $txt: #183b56;
               }
             }
             input{
-              width: 100%;
+              width: 88%;
               height: 50px;
               border: none;
               outline: none;
@@ -167,21 +189,19 @@ $txt: #183b56;
           }
         }
           .services{
-          padding-block: 16px;
-          margin-block: 26px;
-        }
-        .service{
-          width: 89%;
-          max-width: 400px;
-          height: min-content;
-          padding: 0;
-          position: relative;
-          margin: auto;
-          left: 50%;
-          transform: translateX(-50%);
+            display: flex;
+            flex-wrap: wrap;
+          }
+          .service{
+            flex: 1 auto;
+            flex: 44%;
+            max-width: 167px;
+            height: min-content;
+            padding: 0;
+            margin: 18px 10px;
             .service-image{
               width: 100%;
-              height: 180px;
+              height: 105px;
               object-fit: cover;
               filter: brightness(90%);
               border-radius: 4px;
@@ -193,50 +213,31 @@ $txt: #183b56;
               p{
                 margin-bottom: 0;
                 color: #FFBC55;
-                font-size: 13px;
+                font-size: 11px;
                 margin-top: 1px;
                 i{
                   transform: translateY(-0.9px);
                   margin-right: 3px;
-                  font-size: 12px;
+                  font-size: 9px;
                 }
               }
               span{
                 color: rgb(170, 170, 170);
-                font-size: 11px;
+                font-size: 10px;
                 transform: translateX(4px) translateY(2px);
               }
             }
             .name{
-              font-size: 18px;
+              font-size: 14px;
               color: $txt;
               font-weight: 500;
-              margin-bottom: 3px;
+              margin-bottom: 1px;
             }
             .business-name{
-              font-size: 12px;
+              font-size: 11px;
               color: $txt;
               opacity: 0.7;
               font-weight: 500;
-              width: max-content;
-              padding: 3px;
-              margin: -2px;
-              transform: translateY(4px);
-              background: rgba(110,110,110,0.1);
-              border-radius: 4px;
-                i{
-                    font-size: 11px;
-                    margin-right: 6px;
-                }
-            }
-            .short-des{
-              margin-top: 8px;
-              color: $txt;
-              font-size: 15px;
-              opacity: 0.9;
-            }
-            &:first-child{
-              margin-left: 0;
             }
             &:hover{
               .name{
