--- a/static/scss/store/base.css
+++ b/static/scss/store/base.css
@@ -55,13 +55,21 @@
   color: rgba(24, 59, 86, 0.662745098);
   right: 35px;
   top: 43px;
+  background: rgb(246, 246, 246);
+  padding: 17px 16px;
+  margin: -17px -16px;
+  padding-top: 18px;
+  margin-top: -18px;
+  border-radius: 4px;
+}
+.cover .content .cover-search i::before {
   padding: 7px;
   margin: -7px;
   background: rgba(155, 155, 155, 0.22);
   border-radius: 100%;
 }
 .cover .content .cover-search input {
-  width: 100%;
+  width: 88%;
   height: 50px;
   border: none;
   outline: none;
