--- a/static/scss/store/product/product.css
+++ b/static/scss/store/product/product.css
@@ -401,6 +401,90 @@
 .product-section #reviewsSec .reviews #reviewCard .conf i {
   margin-right: 6px;
 }
+.product-section #reviewsSec #productMakeReview {
+  margin-block: 15px;
+  margin-top: 20px;
+  text-align: left;
+  background: rgba(205, 205, 205, 0.16);
+  padding: 10px 15px;
+  display: none;
+}
+.product-section #reviewsSec #productMakeReview label {
+  color: #183b56;
+  font-size: 15px;
+  opacity: 0.9;
+}
+.product-section #reviewsSec #productMakeReview input {
+  width: 100%;
+  height: 45px;
+  border: 0;
+  outline: 0;
+  border-radius: 4px;
+  padding: 10px;
+  color: #183b56;
+  font-size: 14px;
+  opacity: 0.95;
+}
+.product-section #reviewsSec #productMakeReview input::-moz-placeholder {
+  color: #183b56;
+  font-size: 14px;
+  opacity: 0.66;
+}
+.product-section #reviewsSec #productMakeReview input:-ms-input-placeholder {
+  color: #183b56;
+  font-size: 14px;
+  opacity: 0.66;
+}
+.product-section #reviewsSec #productMakeReview input::placeholder {
+  color: #183b56;
+  font-size: 14px;
+  opacity: 0.66;
+}
+.product-section #reviewsSec #productMakeReview textarea {
+  width: 100%;
+  min-height: 90px;
+  height: 90px;
+  max-height: 140px;
+  border: 0;
+  outline: 0;
+  border-radius: 4px;
+  padding: 10px;
+  color: #183b56;
+  font-size: 14px;
+  opacity: 0.95;
+}
+.product-section #reviewsSec #productMakeReview textarea::-moz-placeholder {
+  color: #183b56;
+  font-size: 14px;
+  opacity: 0.66;
+}
+.product-section #reviewsSec #productMakeReview textarea:-ms-input-placeholder {
+  color: #183b56;
+  font-size: 14px;
+  opacity: 0.66;
+}
+.product-section #reviewsSec #productMakeReview textarea::placeholder {
+  color: #183b56;
+  font-size: 14px;
+  opacity: 0.66;
+}
+.product-section #reviewsSec #productMakeReview button {
+  width: 100%;
+  background: #06c484;
+  color: rgb(246, 246, 246);
+  height: 45px;
+  outline: none;
+  border: none;
+  border-radius: 4px;
+}
+.product-section #reviewsSec #productMakeReview i {
+  margin: 5px 6px;
+  font-size: 18px;
+  color: #FFBC55;
+}
+.product-section #reviewsSec #productMakeReview i:first-child {
+  margin-left: 0;
+}
 .product-section #contactSec {
   display: none;
 }
