--- a/static/scss/store/product/product.scss
+++ b/static/scss/store/product/product.scss
@@ -386,6 +386,70 @@ $txt: #183b56;
                 }
             }
         }
+        #productMakeReview{
+            margin-block: 15px;
+            margin-top: 20px;
+            text-align: left;
+            background: rgba(205, 205, 205, 0.16);
+            padding: 10px 15px;
+            display: none;
+            label{
+                color: $txt;
+                font-size: 15px;
+                opacity: 0.9;
+            }
+            input{
+                width: 100%;
+                height: 45px;
+                border: 0;
+                outline: 0;
+                border-radius: 4px;
+                padding: 10px;
+                color: $txt;
+                font-size: 14px;
+                opacity: 0.95;
+                &::placeholder{
+                    color: $txt;
+                    font-size: 14px;
+                    opacity: 0.66;
+                }
+            }
+            textarea{
+                width: 100%;
+                min-height: 90px;
+                height: 90px;
+                max-height: 140px;
+                border: 0;
+                outline: 0;
+                border-radius: 4px;
+                padding: 10px;
+                color: $txt;
+                font-size: 14px;
+                opacity: 0.95;
+                &::placeholder{
+                    color: $txt;
+                    font-size: 14px;
+                    opacity: 0.66;
+                }
+            }
+            button{
+                width: 100%;
+                background: $primBtn;
+                color: $white;
+                height: 45px;
+                outline: none;
+                border: none;
+                border-radius: 4px;
+            }
+            i{
+                margin: 5px 6px;
+                font-size: 18px;
+                color: #FFBC55;
+                &:first-child{
+                    margin-left: 0;
+                }
+            }
+        }
     }
     #contactSec{
         display: none;
